--- a/backend/package.json
+++ b/backend/package.json
@@ -20,5 +20,8 @@
     "joi": "^17.7.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.5.2"
   }
 }
