--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.26.0"
   },
   "devDependencies": {
